# release-confidence-platform

./: .gitignore  CLAUDE.md  RCP_Product_Strategy.md  README.md  pyproject.toml
apps/backend/: README.md
apps/frontend/: README.md
apps/mock-target-api/: README.md  package-lock.json  package.json  serverless.yml
config/defaults/: dev.json  prod.json  staging.json
config/stages/: dev.json  prod.json  staging.json
configs/samples/: audit_config.sample.json  client_config.sample.json  endpoints.sample.json
docs/architecture/: adr_evidence_retention_disposal_enforcement.md  adr_execution_evidence_source_of_truth.md  adr_phase3_finalization_gate_error_handling.md  adr_phase3_gate_failure_terminal_policy.md  adr_phase7_certification_independence.md  adr_phase_3_finalization_completion_cleanup.md  adr_phase_4_evidence_lineage_aggregation.md  adr_phase_4a_engineering_retrieval_consumer_contract.md  adr_phase_4a_lineage_manifest_pagination.md  adr_phase_8_commercialization_positioning.md  adr_report_issuance_certification_gate.md  adr_sanitization_boundary.md  adr_scheduled_execution_occurrence_identity.md  architecture_overview.md  coding_standards.md  config_init_technical_design.md  enhanced_config_init_default_profile_system_technical_design.md  evidence_governance_workstream_a1_retention_enforcement_technical_design.md  evidence_governance_workstream_a2_issuance_governance_technical_design.md  execution_lifecycle.md  finalization_integrity_gate_design.md  folder_ownership.md  hitl_audit_create_blocker_technical_design.md  layer_1_validation_target_api_technical_design.md  naming_and_schema_versioning.md  operator_cli_discovery_technical_design.md  operator_cli_rcp_technical_design.md  phase3_lifecycle_determinism_fix.md  phase_0_project_foundation_technical_design.md  (+18 more)
docs/legal/: README.md
infra/: package.json  serverless.yml
release_confidence_platform/: __init__.py
scripts/: rcp.py  run_local_audit.py  validate_config.py
(+539 files in other folders)
