[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "release-confidence-platform"
version = "0.0.0"
description = "Phase 0 foundation for the Release Confidence Platform"
requires-python = ">=3.11,<3.12"
dependencies = [
  "boto3>=1.34,<2",
  "fpdf2>=2.7,<3",
  "pydantic>=2,<3",
  "requests>=2.31,<3",
]

[project.scripts]
rcp = "release_confidence_platform.operator_cli.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.5,<1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["release_confidence_platform*"]
exclude = ["tests*", "docs*", "apps*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
